[gd_scene load_steps=11 format=4 uid="uid://8l8naldlat7k"]

[ext_resource type="Texture2D" uid="uid://b32ns1h6o1vvm" path="res://icon.svg" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://ba64hbe1wm4ij" path="res://main.gd" id="1_7mycd"]
[ext_resource type="Script" uid="uid://yrv5xmml5e0" path="res://player.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://d0akn272pxfyk" path="res://Background.png" id="2_5vw27"]
[ext_resource type="Texture2D" uid="uid://nj8i6eacm2x8" path="res://blue.png" id="3_h2yge"]
[ext_resource type="FontFile" uid="uid://cf6f3ep7dd08c" path="res://Roboto-Italic-VariableFont_wdth,wght.ttf" id="7_272bh"]
[ext_resource type="PackedScene" uid="uid://bochfjwqtqroj" path="res://Enemy.tscn" id="9_4c57u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bvp3"]
size = Vector2(83, 141)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_1bvp3"]
texture = ExtResource("3_h2yge")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_lquwl"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_1bvp3")

[node name="Node" type="Node"]
script = ExtResource("1_7mycd")
metadata/_edit_vertical_guides_ = [-5455.0]

[node name="Player" type="CharacterBody2D" parent="."]
collision_mask = 3
script = ExtResource("1_h2yge")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(69.2811, 170)
scale = Vector2(0.435304, 0.324219)
texture = ExtResource("1_0xm2m")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(69.5, 165.5)
shape = SubResource("RectangleShape2D_1bvp3")

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(68, 162)
position_smoothing_enabled = true

[node name="TileMapLayer" type="TileMapLayer" parent="."]
scale = Vector2(3, 3)
tile_map_data = PackedByteArray("AAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAJAAAAAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAKAAUAAAAAAAAAAAALAAUAAAAAAAAAAAAMAAUAAAAAAAAAAAAAAAkAAAAAAAAAAAABAAkAAAAAAAAAAAACAAkAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAkAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAAkAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAkAAAAAAAAAAAAMAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAKAAIAAAAAAAAAAAALAAIAAAAAAAAAAAAMAAIAAAAAAAAAAAANAAIAAAAAAAAAAAAOAAIAAAAAAAAAAAAPAAIAAAAAAAAAAAAHAAkAAAAAAAAAAAAFAAQAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAXAAcAAAAAAAAAAAAXAAgAAAAAAAAAAAAXAAkAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAAAAAAWAAsAAAAAAAAAAAAVAAsAAAAAAAAAAAAQAA8AAAAAAAAAAAAPAA8AAAAAAAAAAAAOAA8AAAAAAAAAAAANAA8AAAAAAAAAAAAMAA8AAAAAAAAAAAALAA8AAAAAAAAAAAAKAA8AAAAAAAAAAAAJAA8AAAAAAAAAAAAIAA8AAAAAAAAAAAAHAA8AAAAAAAAAAAAGAA8AAAAAAAAAAAARAA8AAAAAAAAAAAASAA8AAAAAAAAAAAATAA8AAAAAAAAAAAAUAA8AAAAAAAAAAAAVAA8AAAAAAAAAAAAWAA8AAAAAAAAAAAAXAA8AAAAAAAAAAAAYAA8AAAAAAAAAAAAZAA8AAAAAAAAAAAAaAA8AAAAAAAAAAAAbAA8AAAAAAAAAAAAcAA8AAAAAAAAAAAAdAA8AAAAAAAAAAAAeAA8AAAAAAAAAAAAfAA8AAAAAAAAAAAAgAA8AAAAAAAAAAAAcAA4AAAAAAAAAAAAfAAsAAAAAAAAAAAAgAAsAAAAAAAAAAAAhAAsAAAAAAAAAAAAiAAsAAAAAAAAAAAAjAAsAAAAAAAAAAAAkAAsAAAAAAAAAAAAlAAsAAAAAAAAAAAAmAAsAAAAAAAAAAAAnAAsAAAAAAAAAAAAoAAsAAAAAAAAAAAApAAsAAAAAAAAAAAAqAAsAAAAAAAAAAAArAAsAAAAAAAAAAAAhAA8AAAAAAAAAAAAiAA8AAAAAAAAAAAAjAA8AAAAAAAAAAAAkAA8AAAAAAAAAAAAlAA8AAAAAAAAAAAAmAA8AAAAAAAAAAAAnAA8AAAAAAAAAAAAoAA8AAAAAAAAAAAApAA8AAAAAAAAAAAAqAA8AAAAAAAAAAAArAA8AAAAAAAAAAAAsAA8AAAAAAAAAAAAtAA8AAAAAAAAAAAAuAA8AAAAAAAAAAAD//wUAAAAAAAAAAAD//wQAAAAAAAAAAAD//wMAAAAAAAAAAAD//wIAAAAAAAAAAAD//wEAAAAAAAAAAAD+/wEAAAAAAAAAAAD9/wEAAAAAAAAAAAD8/wEAAAAAAAAAAAD7/wEAAAAAAAAAAAD//wkAAAAAAAAAAAD+/wkAAAAAAAAAAAD9/wkAAAAAAAAAAAAFAAMAAAAAAAAAAAAOAAkAAAAAAAAAAAAPAAkAAAAAAAAAAAD8/wkAAAAAAAAAAAD7/wkAAAAAAAAAAAD7/wgAAAAAAAAAAAD7/wcAAAAAAAAAAAD7/wYAAAAAAAAAAAD6/wYAAAAAAAAAAAD5/wYAAAAAAAAAAAD4/wYAAAAAAAAAAAD3/wYAAAAAAAAAAAD2/wYAAAAAAAAAAAD1/wYAAAAAAAAAAAD1/wcAAAAAAAAAAAD1/wgAAAAAAAAAAAD1/wkAAAAAAAAAAAD3/wUAAAAAAAAAAAD3/wQAAAAAAAAAAAD3/wMAAAAAAAAAAAD0/wkAAAAAAAAAAADz/wkAAAAAAAAAAADy/wkAAAAAAAAAAADw/wIAAAAAAAAAAADx/wIAAAAAAAAAAADy/wIAAAAAAAAAAADz/wIAAAAAAAAAAADv/wIAAAAAAAAAAADu/wIAAAAAAAAAAADt/wIAAAAAAAAAAADt/wUAAAAAAAAAAADu/wUAAAAAAAAAAADv/wUAAAAAAAAAAADw/wUAAAAAAAAAAADx/wUAAAAAAAAAAADs/wIAAAAAAAAAAADs/wMAAAAAAAAAAADs/wQAAAAAAAAAAADs/wUAAAAAAAAAAAD7/wAAAAAAAAAAAAD7////AAAAAAAAAAD7//7/AAAAAAAAAAD6//7/AAAAAAAAAAD5//7/AAAAAAAAAAD4//7/AAAAAAAAAAD3//7/AAAAAAAAAAD2//7/AAAAAAAAAAD1//7/AAAAAAAAAADt/wYAAAAAAAAAAADt/wcAAAAAAAAAAADt/wgAAAAAAAAAAADu/wgAAAAAAAAAAADu/wkAAAAAAAAAAADu/woAAAAAAAAAAADu/wsAAAAAAAAAAADu/wwAAAAAAAAAAADu/w0AAAAAAAAAAADv/w0AAAAAAAAAAADw/w0AAAAAAAAAAADx/w0AAAAAAAAAAADy/w0AAAAAAAAAAADz/w0AAAAAAAAAAAD0/w0AAAAAAAAAAAD1/w0AAAAAAAAAAAD2/w0AAAAAAAAAAAD3/w0AAAAAAAAAAAD4/w0AAAAAAAAAAAD4/wwAAAAAAAAAAAD5/w0AAAAAAAAAAAD6/w0AAAAAAAAAAAD7/w0AAAAAAAAAAAD8/w0AAAAAAAAAAAD9/w0AAAAAAAAAAAD+/w0AAAAAAAAAAAD//w0AAAAAAAAAAAAAAA0AAAAAAAAAAAATAAsAAAAAAAAAAAAUAAsAAAAAAAAAAAAQAAIAAAAAAAAAAAARAAIAAAAAAAAAAAASAAIAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAAfAAoAAAAAAAAAAAAfAAgAAAAAAAAAAAAfAAcAAAAAAAAAAAAeAAcAAAAAAAAAAAAdAAcAAAAAAAAAAAAcAAcAAAAAAAAAAAAbAAcAAAAAAAAAAAArAAoAAAAAAAAAAAArAAkAAAAAAAAAAAArAAgAAAAAAAAAAAArAAcAAAAAAAAAAAAqAAcAAAAAAAAAAAApAAcAAAAAAAAAAAAoAAcAAAAAAAAAAAAnAAcAAAAAAAAAAAAvAA8AAAAAAAAAAAAvAA4AAAAAAAAAAAAvAA0AAAAAAAAAAAAvAAwAAAAAAAAAAAAsAAcAAAAAAAAAAAAtAAcAAAAAAAAAAAAwAAwAAAAAAAAAAAAxAAwAAAAAAAAAAAAyAAwAAAAAAAAAAAAyAA0AAAAAAAAAAAAyAA4AAAAAAAAAAAAyAA8AAAAAAAAAAAAGABQAAAAAAAAAAAAHABQAAAAAAAAAAAAIABQAAAAAAAAAAAAJABQAAAAAAAAAAAAKABQAAAAAAAAAAAALABQAAAAAAAAAAAAMABQAAAAAAAAAAAANABQAAAAAAAAAAAAOABQAAAAAAAAAAAAPABQAAAAAAAAAAAAQABQAAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA8AAAAAAAAAAAAAABAAAAAAAAAAAAD//xAAAAAAAAAAAAD+/xAAAAAAAAAAAAD9/xAAAAAAAAAAAAD8/xAAAAAAAAAAAAD7/xAAAAAAAAAAAAAAABQAAAAAAAAAAAD//xQAAAAAAAAAAAD+/xQAAAAAAAAAAAD9/xQAAAAAAAAAAAD8/xQAAAAAAAAAAAD7/xQAAAAAAAAAAAD6/xQAAAAAAAAAAAD5/xQAAAAAAAAAAAD4/xQAAAAAAAAAAAD3/xQAAAAAAAAAAAD2/xQAAAAAAAAAAAD2/xMAAAAAAAAAAAD2/xIAAAAAAAAAAAD1/xIAAAAAAAAAAAD0/xIAAAAAAAAAAADz/xIAAAAAAAAAAADy/xIAAAAAAAAAAADx/xIAAAAAAAAAAADw/xIAAAAAAAAAAADv/xIAAAAAAAAAAADu/xIAAAAAAAAAAADt/xIAAAAAAAAAAADs/xIAAAAAAAAAAADr/xIAAAAAAAAAAADq/xIAAAAAAAAAAADp/xIAAAAAAAAAAADp/xEAAAAAAAAAAADp/xAAAAAAAAAAAADp/w8AAAAAAAAAAADp/w4AAAAAAAAAAADo/w4AAAAAAAAAAADn/w4AAAAAAAAAAADm/w4AAAAAAAAAAADl/w4AAAAAAAAAAADk/w4AAAAAAAAAAADj/w4AAAAAAAAAAADi/w4AAAAAAAAAAADm/wkAAAAAAAAAAADl/wkAAAAAAAAAAADk/wkAAAAAAAAAAADj/wkAAAAAAAAAAADi/wkAAAAAAAAAAADh/wkAAAAAAAAAAADh/w4AAAAAAAAAAADh/w8AAAAAAAAAAADh/xAAAAAAAAAAAADh/xEAAAAAAAAAAADh/xIAAAAAAAAAAADh/xMAAAAAAAAAAADe/xcAAAAAAAAAAADf/xcAAAAAAAAAAADg/xcAAAAAAAAAAADh/xcAAAAAAAAAAADi/xcAAAAAAAAAAADj/xcAAAAAAAAAAADk/xcAAAAAAAAAAADl/xcAAAAAAAAAAADm/xcAAAAAAAAAAADl/xMAAAAAAAAAAADl/xQAAAAAAAAAAADl/xUAAAAAAAAAAADl/xYAAAAAAAAAAADn/xcAAAAAAAAAAADo/xcAAAAAAAAAAADo/xgAAAAAAAAAAADo/xkAAAAAAAAAAADp/xkAAAAAAAAAAADq/xkAAAAAAAAAAADr/xkAAAAAAAAAAADr/xoAAAAAAAAAAADr/xsAAAAAAAAAAADs/xsAAAAAAAAAAADt/xsAAAAAAAAAAADu/xsAAAAAAAAAAADv/xsAAAAAAAAAAADw/xsAAAAAAAAAAADw/xoAAAAAAAAAAADw/xkAAAAAAAAAAADx/xkAAAAAAAAAAADy/xkAAAAAAAAAAADz/xkAAAAAAAAAAAD0/xkAAAAAAAAAAAD1/xkAAAAAAAAAAAD2/xkAAAAAAAAAAAD3/xkAAAAAAAAAAAD4/xkAAAAAAAAAAAD5/xkAAAAAAAAAAAD6/xkAAAAAAAAAAAD7/xkAAAAAAAAAAAD8/xkAAAAAAAAAAAD9/xkAAAAAAAAAAAD+/xkAAAAAAAAAAAD//xkAAAAAAAAAAAAAABkAAAAAAAAAAAAAABgAAAAAAAAAAAABABgAAAAAAAAAAAACABgAAAAAAAAAAAADABgAAAAAAAAAAAADABcAAAAAAAAAAAD2/x0AAAAAAAAAAAD3/x0AAAAAAAAAAAD4/x0AAAAAAAAAAAD5/x0AAAAAAAAAAAD6/x0AAAAAAAAAAAD7/x0AAAAAAAAAAAD8/x0AAAAAAAAAAAD9/x0AAAAAAAAAAAD+/x0AAAAAAAAAAAD//x0AAAAAAAAAAAAAAB0AAAAAAAAAAAABAB0AAAAAAAAAAAACAB0AAAAAAAAAAAADAB0AAAAAAAAAAAAEAB0AAAAAAAAAAAAFAB0AAAAAAAAAAAAGAB0AAAAAAAAAAAAHAB0AAAAAAAAAAAAIAB0AAAAAAAAAAAAJAB0AAAAAAAAAAAAKAB0AAAAAAAAAAAALAB0AAAAAAAAAAAAMAB0AAAAAAAAAAAANAB0AAAAAAAAAAAAfAAkAAAAAAAAAAAAaAAcAAAAAAAAAAAAZAAcAAAAAAAAAAAAYAAcAAAAAAAAAAADg/wkAAAAAAAAAAADf/wkAAAAAAAAAAADe/wkAAAAAAAAAAADd/wkAAAAAAAAAAADc/wkAAAAAAAAAAADc/woAAAAAAAAAAADc/wsAAAAAAAAAAADc/wwAAAAAAAAAAADc/w0AAAAAAAAAAADc/w4AAAAAAAAAAADc/w8AAAAAAAAAAADc/xAAAAAAAAAAAADc/xEAAAAAAAAAAADc/xIAAAAAAAAAAADc/xMAAAAAAAAAAADc/xQAAAAAAAAAAADc/xUAAAAAAAAAAADc/xYAAAAAAAAAAADc/xcAAAAAAAAAAADd/xcAAAAAAAAAAADl/wQAAAAAAAAAAADm/wQAAAAAAAAAAADn/wQAAAAAAAAAAADo/wQAAAAAAAAAAADp/wQAAAAAAAAAAADq/wQAAAAAAAAAAADr/wQAAAAAAAAAAAARABQAAAAAAAAAAAARABMAAAAAAAAAAAARABIAAAAAAAAAAAARABEAAAAAAAAAAAARABAAAAAAAAAAAAAGABkAAAAAAAAAAAAHABkAAAAAAAAAAAAIABkAAAAAAAAAAAAJABkAAAAAAAAAAAAKABkAAAAAAAAAAAALABkAAAAAAAAAAAAMABkAAAAAAAAAAAANABkAAAAAAAAAAAAOABkAAAAAAAAAAAAPABkAAAAAAAAAAAAQABkAAAAAAAAAAAARABkAAAAAAAAAAAASABkAAAAAAAAAAAATABkAAAAAAAAAAAAUABkAAAAAAAAAAAAUABgAAAAAAAAAAAAUABcAAAAAAAAAAAAVABcAAAAAAAAAAAAWABcAAAAAAAAAAAAWABYAAAAAAAAAAAAWABUAAAAAAAAAAAAXABUAAAAAAAAAAAAYABUAAAAAAAAAAAAYABQAAAAAAAAAAAAYABMAAAAAAAAAAAAZABMAAAAAAAAAAAAaABMAAAAAAAAAAAAbABMAAAAAAAAAAAAbABQAAAAAAAAAAAAbABUAAAAAAAAAAAAbABYAAAAAAAAAAAAbABcAAAAAAAAAAAAbABgAAAAAAAAAAAAbABkAAAAAAAAAAAAcABkAAAAAAAAAAAAdABkAAAAAAAAAAAAeABkAAAAAAAAAAAAfABkAAAAAAAAAAAAgABkAAAAAAAAAAAAgABgAAAAAAAAAAAAgABcAAAAAAAAAAAAhABcAAAAAAAAAAAAiABcAAAAAAAAAAAAiABYAAAAAAAAAAAAiABUAAAAAAAAAAAAjABUAAAAAAAAAAAAkABUAAAAAAAAAAAAzAA8AAAAAAAAAAAA0AA8AAAAAAAAAAAA1AA8AAAAAAAAAAAA2AA8AAAAAAAAAAAA6AA8AAAAAAAAAAAA7AA8AAAAAAAAAAAA8AA8AAAAAAAAAAAA9AA8AAAAAAAAAAAA+AA8AAAAAAAAAAAA/AA8AAAAAAAAAAABAAA8AAAAAAAAAAAA3AA8AAAAAAAAAAAA4AA8AAAAAAAAAAAA5AA8AAAAAAAAAAAAkABQAAAAAAAAAAAAkABMAAAAAAAAAAAAlABMAAAAAAAAAAAAmABMAAAAAAAAAAAAnABMAAAAAAAAAAAAnABQAAAAAAAAAAAAnABUAAAAAAAAAAAAnABYAAAAAAAAAAAAnABcAAAAAAAAAAAAnABgAAAAAAAAAAAAnABkAAAAAAAAAAAAoABkAAAAAAAAAAAApABkAAAAAAAAAAAAqABkAAAAAAAAAAAArABkAAAAAAAAAAAAsABkAAAAAAAAAAAAsABgAAAAAAAAAAAAsABcAAAAAAAAAAAAtABcAAAAAAAAAAAAuABcAAAAAAAAAAAAuABYAAAAAAAAAAAAuABUAAAAAAAAAAAAvABUAAAAAAAAAAAAwABUAAAAAAAAAAAAwABQAAAAAAAAAAAAwABMAAAAAAAAAAAAxABMAAAAAAAAAAAAyABMAAAAAAAAAAAAzABMAAAAAAAAAAAAzABQAAAAAAAAAAAAzABUAAAAAAAAAAAAzABYAAAAAAAAAAAAzABcAAAAAAAAAAAAzABgAAAAAAAAAAAAzABkAAAAAAAAAAAA0ABkAAAAAAAAAAAA1ABkAAAAAAAAAAAA2ABkAAAAAAAAAAAA3ABkAAAAAAAAAAAA4ABkAAAAAAAAAAAA5ABkAAAAAAAAAAAA3ABMAAAAAAAAAAAA4ABMAAAAAAAAAAAA5ABMAAAAAAAAAAAA6ABMAAAAAAAAAAAA7ABMAAAAAAAAAAAA8ABMAAAAAAAAAAAA9ABMAAAAAAAAAAAA+ABMAAAAAAAAAAAA/ABMAAAAAAAAAAABAABMAAAAAAAAAAAA6ABkAAAAAAAAAAAA7ABkAAAAAAAAAAAA8ABkAAAAAAAAAAAA9ABkAAAAAAAAAAAA9ABgAAAAAAAAAAAA9ABcAAAAAAAAAAAA+ABcAAAAAAAAAAAA/ABcAAAAAAAAAAABAABcAAAAAAAAAAABBABcAAAAAAAAAAABFABMAAAAAAAAAAABBABMAAAAAAAAAAABCABMAAAAAAAAAAABDABMAAAAAAAAAAABEABMAAAAAAAAAAABGABMAAAAAAAAAAABHABMAAAAAAAAAAABIABMAAAAAAAAAAABJABMAAAAAAAAAAABBABgAAAAAAAAAAABBABkAAAAAAAAAAABCABkAAAAAAAAAAABDABkAAAAAAAAAAABEABkAAAAAAAAAAABFABkAAAAAAAAAAABGABkAAAAAAAAAAABHABkAAAAAAAAAAABIABkAAAAAAAAAAABJABkAAAAAAAAAAABKABkAAAAAAAAAAABLABkAAAAAAAAAAABMABkAAAAAAAAAAABNABkAAAAAAAAAAABNABgAAAAAAAAAAABNABcAAAAAAAAAAABOABcAAAAAAAAAAABPABcAAAAAAAAAAABPABYAAAAAAAAAAABPABUAAAAAAAAAAABQABUAAAAAAAAAAABRABUAAAAAAAAAAABRABQAAAAAAAAAAABRABMAAAAAAAAAAABSABMAAAAAAAAAAABTABMAAAAAAAAAAABUABMAAAAAAAAAAABVABMAAAAAAAAAAABWABMAAAAAAAAAAABKAA8AAAAAAAAAAABLAA8AAAAAAAAAAABMAA8AAAAAAAAAAABNAA8AAAAAAAAAAABOAA8AAAAAAAAAAAA2AAoAAAAAAAAAAAA3AAoAAAAAAAAAAAA4AAoAAAAAAAAAAAA5AAoAAAAAAAAAAAA6AAoAAAAAAAAAAAA7AAoAAAAAAAAAAAA8AAoAAAAAAAAAAAA9AAoAAAAAAAAAAAA+AAoAAAAAAAAAAAA/AAoAAAAAAAAAAABAAAoAAAAAAAAAAABBAAoAAAAAAAAAAABCAAoAAAAAAAAAAABDAAoAAAAAAAAAAABEAAoAAAAAAAAAAABFAAoAAAAAAAAAAABGAAoAAAAAAAAAAABHAAoAAAAAAAAAAABIAAoAAAAAAAAAAABJAAoAAAAAAAAAAADu//7/AAAAAAAAAADt//7/AAAAAAAAAADs//7/AAAAAAAAAADr//7/AAAAAAAAAADq//7/AAAAAAAAAADp//7/AAAAAAAAAADo//7/AAAAAAAAAADo////AAAAAAAAAADo/wAAAAAAAAAAAADl//7/AAAAAAAAAADl////AAAAAAAAAADl/wAAAAAAAAAAAADl//3/AAAAAAAAAADl//z/AAAAAAAAAADk//z/AAAAAAAAAADj//z/AAAAAAAAAADi//z/AAAAAAAAAADh//z/AAAAAAAAAADg//z/AAAAAAAAAADf//z/AAAAAAAAAADe//z/AAAAAAAAAADd//z/AAAAAAAAAADc//z/AAAAAAAAAADb//z/AAAAAAAAAADa//z/AAAAAAAAAAA8AAUAAAAAAAAAAAA9AAUAAAAAAAAAAAA+AAUAAAAAAAAAAAA/AAUAAAAAAAAAAABAAAUAAAAAAAAAAABBAAUAAAAAAAAAAABCAAUAAAAAAAAAAABDAAUAAAAAAAAAAABEAAUAAAAAAAAAAABFAAUAAAAAAAAAAABGAAUAAAAAAAAAAABHAAUAAAAAAAAAAABIAAUAAAAAAAAAAABJAAUAAAAAAAAAAABCAAQAAAAAAAAAAABCAAMAAAAAAAAAAABCAAIAAAAAAAAAAABDAAIAAAAAAAAAAABEAAIAAAAAAAAAAABEAAEAAAAAAAAAAABEAAAAAAAAAAAAAABFAAAAAAAAAAAAAABGAAAAAAAAAAAAAABGAP//AAAAAAAAAABGAP7/AAAAAAAAAABHAP7/AAAAAAAAAABIAP7/AAAAAAAAAABJAP7/AAAAAAAAAABKAP7/AAAAAAAAAABLAP7/AAAAAAAAAABJAPr/AAAAAAAAAABIAPr/AAAAAAAAAABHAPr/AAAAAAAAAABGAPr/AAAAAAAAAABFAPr/AAAAAAAAAABEAPr/AAAAAAAAAABDAPr/AAAAAAAAAABCAPr/AAAAAAAAAABBAPr/AAAAAAAAAABAAPr/AAAAAAAAAAA/APr/AAAAAAAAAAA+APr/AAAAAAAAAAA9APr/AAAAAAAAAAA8APr/AAAAAAAAAABMAP7/AAAAAAAAAABNAP7/AAAAAAAAAABNAP3/AAAAAAAAAABNAPz/AAAAAAAAAABNAPv/AAAAAAAAAABNAPr/AAAAAAAAAABOAPr/AAAAAAAAAABPAPr/AAAAAAAAAABQAPr/AAAAAAAAAABRAPr/AAAAAAAAAABSAPr/AAAAAAAAAABVAPr/AAAAAAAAAABWAPr/AAAAAAAAAABXAPr/AAAAAAAAAABYAPr/AAAAAAAAAABNAAUAAAAAAAAAAABOAAUAAAAAAAAAAABPAAUAAAAAAAAAAABPAAQAAAAAAAAAAABPAAMAAAAAAAAAAABQAAMAAAAAAAAAAABRAAMAAAAAAAAAAABRAAIAAAAAAAAAAABRAAEAAAAAAAAAAABSAAEAAAAAAAAAAABTAAEAAAAAAAAAAABUAAEAAAAAAAAAAABVAAEAAAAAAAAAAABWAAEAAAAAAAAAAABXAAEAAAAAAAAAAABYAAEAAAAAAAAAAAArAAYAAAAAAAAAAAArAAUAAAAAAAAAAAArAAQAAAAAAAAAAAAsAAQAAAAAAAAAAAAtAAQAAAAAAAAAAAAuAAQAAAAAAAAAAAAvAAQAAAAAAAAAAAAoAAAAAAAAAAAAAAApAAAAAAAAAAAAAAAqAAAAAAAAAAAAAAArAAAAAAAAAAAAAAAnAAAAAAAAAAAAAAAmAAAAAAAAAAAAAAAlAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAkAAEAAAAAAAAAAAAkAAIAAAAAAAAAAAAjAAIAAAAAAAAAAAAiAAIAAAAAAAAAAAAhAAIAAAAAAAAAAAAgAAIAAAAAAAAAAAAfAAIAAAAAAAAAAAAeAAIAAAAAAAAAAAAdAAIAAAAAAAAAAAAcAAIAAAAAAAAAAAAbAAIAAAAAAAAAAAAaAAIAAAAAAAAAAAAZAAIAAAAAAAAAAAAYAAIAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAABNAAoAAAAAAAAAAABOAAoAAAAAAAAAAABPAAoAAAAAAAAAAABQAAoAAAAAAAAAAABRAAoAAAAAAAAAAADz/yEAAAAAAAAAAADy/yEAAAAAAAAAAADx/yEAAAAAAAAAAADw/yEAAAAAAAAAAADv/yEAAAAAAAAAAADu/yEAAAAAAAAAAADt/yEAAAAAAAAAAADs/yEAAAAAAAAAAADr/yEAAAAAAAAAAADq/yEAAAAAAAAAAADp/yEAAAAAAAAAAADp/yIAAAAAAAAAAADp/yMAAAAAAAAAAADp/yQAAAAAAAAAAADp/yUAAAAAAAAAAADo/yUAAAAAAAAAAADn/yUAAAAAAAAAAADm/yUAAAAAAAAAAADl/yUAAAAAAAAAAADk/yUAAAAAAAAAAADj/yUAAAAAAAAAAADi/yUAAAAAAAAAAADh/yUAAAAAAAAAAADh/yQAAAAAAAAAAADh/yMAAAAAAAAAAADg/yMAAAAAAAAAAADf/yMAAAAAAAAAAADf/yIAAAAAAAAAAADf/yEAAAAAAAAAAADe/yEAAAAAAAAAAADd/yEAAAAAAAAAAADd/yAAAAAAAAAAAADd/x8AAAAAAAAAAADc/x8AAAAAAAAAAADb/x8AAAAAAAAAAADb/x4AAAAAAAAAAADb/x0AAAAAAAAAAADa/x0AAAAAAAAAAADZ/x0AAAAAAAAAAADY/x0AAAAAAAAAAADu//n/AAAAAAAAAADv//n/AAAAAAAAAADw//n/AAAAAAAAAADx//n/AAAAAAAAAADy//n/AAAAAAAAAADz//n/AAAAAAAAAAD0//n/AAAAAAAAAAD1//n/AAAAAAAAAADg//v/AAAAAAAAAADg//r/AAAAAAAAAADg//n/AAAAAAAAAADc//v/AAAAAAAAAADc//r/AAAAAAAAAADc//n/AAAAAAAAAADZ//z/AAAAAAAAAADY//z/AAAAAAAAAADY//T/AAAAAAAAAADZ//T/AAAAAAAAAADa//T/AAAAAAAAAADb//T/AAAAAAAAAADc//T/AAAAAAAAAADd//T/AAAAAAAAAADe//T/AAAAAAAAAADY//D/AAAAAAAAAADZ//D/AAAAAAAAAADa//D/AAAAAAAAAADb//D/AAAAAAAAAADd/+z/AAAAAAAAAADe/+z/AAAAAAAAAADf/+z/AAAAAAAAAADg/+z/AAAAAAAAAADh/+z/AAAAAAAAAADi/+z/AAAAAAAAAADj/+z/AAAAAAAAAADk/+z/AAAAAAAAAADl/+z/AAAAAAAAAADm/+z/AAAAAAAAAADn/+z/AAAAAAAAAADo/+z/AAAAAAAAAADp/+z/AAAAAAAAAADh/+3/AAAAAAAAAADh/+7/AAAAAAAAAADh/+//AAAAAAAAAADl/+3/AAAAAAAAAADl/+7/AAAAAAAAAADl/+//AAAAAAAAAADp/+3/AAAAAAAAAADp/+7/AAAAAAAAAADp/+//AAAAAAAAAADq/+z/AAAAAAAAAADr/+z/AAAAAAAAAADs/+z/AAAAAAAAAADt/+z/AAAAAAAAAADt/+3/AAAAAAAAAADt/+7/AAAAAAAAAADt/+//AAAAAAAAAADt//D/AAAAAAAAAADt//H/AAAAAAAAAADu//H/AAAAAAAAAADv//H/AAAAAAAAAADw//H/AAAAAAAAAADx//H/AAAAAAAAAADx//D/AAAAAAAAAADx/+//AAAAAAAAAADy/+//AAAAAAAAAADz/+//AAAAAAAAAADz/+7/AAAAAAAAAADz/+3/AAAAAAAAAAD0/+3/AAAAAAAAAAD1/+3/AAAAAAAAAAD1/+z/AAAAAAAAAAD1/+v/AAAAAAAAAAD2/+v/AAAAAAAAAAD3/+v/AAAAAAAAAAD4/+v/AAAAAAAAAAD2/+//AAAAAAAAAAD3/+//AAAAAAAAAAD4/+//AAAAAAAAAAD5/+//AAAAAAAAAAD9//H/AAAAAAAAAAD+//H/AAAAAAAAAAD///H/AAAAAAAAAAAAAPH/AAAAAAAAAAABAPH/AAAAAAAAAAACAPH/AAAAAAAAAAD8/+v/AAAAAAAAAAD9/+v/AAAAAAAAAAD+/+v/AAAAAAAAAAD//+v/AAAAAAAAAAAAAOv/AAAAAAAAAAABAOv/AAAAAAAAAAACAOv/AAAAAAAAAAADAOv/AAAAAAAAAAAEAOv/AAAAAAAAAAAFAOv/AAAAAAAAAAAGAOv/AAAAAAAAAAAHAOv/AAAAAAAAAAACAPD/AAAAAAAAAAACAO//AAAAAAAAAAADAPH/AAAAAAAAAAAEAPH/AAAAAAAAAAAFAPH/AAAAAAAAAAAGAPH/AAAAAAAAAAAGAPD/AAAAAAAAAAAGAO//AAAAAAAAAAAHAPH/AAAAAAAAAAAIAPH/AAAAAAAAAAAJAPH/AAAAAAAAAAAKAPH/AAAAAAAAAAAKAPD/AAAAAAAAAAAKAO//AAAAAAAAAAALAPH/AAAAAAAAAAAMAPH/AAAAAAAAAAANAPH/AAAAAAAAAAAIAOv/AAAAAAAAAAAJAOv/AAAAAAAAAAAKAOv/AAAAAAAAAAALAOv/AAAAAAAAAAAMAOv/AAAAAAAAAAANAOv/AAAAAAAAAAAOAOv/AAAAAAAAAAAOAOz/AAAAAAAAAAAOAO3/AAAAAAAAAAAOAO7/AAAAAAAAAAAOAO//AAAAAAAAAAAOAPD/AAAAAAAAAAAOAPH/AAAAAAAAAAAOAPL/AAAAAAAAAAAOAPP/AAAAAAAAAAAOAPT/AAAAAAAAAAAOAPX/AAAAAAAAAAAOAPb/AAAAAAAAAAAEAPr/AAAAAAAAAAAFAPr/AAAAAAAAAAAGAPr/AAAAAAAAAAAHAPr/AAAAAAAAAAAIAPr/AAAAAAAAAAAJAPr/AAAAAAAAAAAKAPr/AAAAAAAAAAALAPr/AAAAAAAAAAAMAPr/AAAAAAAAAAANAPr/AAAAAAAAAAAOAPr/AAAAAAAAAAAOAPn/AAAAAAAAAAAOAPj/AAAAAAAAAAAOAPf/AAAAAAAAAAADAPr/AAAAAAAAAAACAPr/AAAAAAAAAAABAPr/AAAAAAAAAAAAAPr/AAAAAAAAAAD///r/AAAAAAAAAAAHAPX/AAAAAAAAAAAGAPX/AAAAAAAAAAAFAPX/AAAAAAAAAAAEAPX/AAAAAAAAAAADAPX/AAAAAAAAAAACAPX/AAAAAAAAAAABAPX/AAAAAAAAAAAAAPX/AAAAAAAAAAD///X/AAAAAAAAAAD+//X/AAAAAAAAAAD9//X/AAAAAAAAAAD8//X/AAAAAAAAAAD7//X/AAAAAAAAAAD6//X/AAAAAAAAAAD5//X/AAAAAAAAAAD4//X/AAAAAAAAAAD6/+//AAAAAAAAAAD7/+//AAAAAAAAAAD0//X/AAAAAAAAAADz//X/AAAAAAAAAADy//X/AAAAAAAAAADx//X/AAAAAAAAAADw//X/AAAAAAAAAADv//X/AAAAAAAAAADu//X/AAAAAAAAAADj//P/AAAAAAAAAADk//P/AAAAAAAAAADl//P/AAAAAAAAAADm//P/AAAAAAAAAADn//P/AAAAAAAAAADj//T/AAAAAAAAAADj//X/AAAAAAAAAADj//b/AAAAAAAAAADj//f/AAAAAAAAAADk//f/AAAAAAAAAADl//f/AAAAAAAAAADm//f/AAAAAAAAAADn//f/AAAAAAAAAADn//T/AAAAAAAAAADn//X/AAAAAAAAAADn//b/AAAAAAAAAAAPAO//AAAAAAAAAAAQAO//AAAAAAAAAAARAO//AAAAAAAAAAASAO//AAAAAAAAAAATAO//AAAAAAAAAAAUAO//AAAAAAAAAAAPAPP/AAAAAAAAAAAQAPP/AAAAAAAAAAARAPP/AAAAAAAAAAASAPP/AAAAAAAAAAATAPP/AAAAAAAAAAAUAPP/AAAAAAAAAAAVAO//AAAAAAAAAAAWAO//AAAAAAAAAAAXAO//AAAAAAAAAAAXAO7/AAAAAAAAAAAXAO3/AAAAAAAAAAAYAO3/AAAAAAAAAAAZAO3/AAAAAAAAAAAaAO3/AAAAAAAAAAAaAO7/AAAAAAAAAAAaAO//AAAAAAAAAAAbAO//AAAAAAAAAAAcAO//AAAAAAAAAAAdAO//AAAAAAAAAAAeAO//AAAAAAAAAAAeAO7/AAAAAAAAAAAeAO3/AAAAAAAAAAAfAO3/AAAAAAAAAAAgAO3/AAAAAAAAAAAhAO3/AAAAAAAAAAAhAO7/AAAAAAAAAAAhAO//AAAAAAAAAAAiAO//AAAAAAAAAAAjAO//AAAAAAAAAAAkAO//AAAAAAAAAAAlAO//AAAAAAAAAAAlAO7/AAAAAAAAAAAlAO3/AAAAAAAAAAAmAO3/AAAAAAAAAAAnAO3/AAAAAAAAAAAoAO3/AAAAAAAAAAAoAO7/AAAAAAAAAAAoAO//AAAAAAAAAAApAO//AAAAAAAAAAAqAO//AAAAAAAAAAArAO//AAAAAAAAAAAVAPf/AAAAAAAAAAAWAPf/AAAAAAAAAAAXAPf/AAAAAAAAAAAYAPf/AAAAAAAAAAAZAPf/AAAAAAAAAAAaAPf/AAAAAAAAAAAbAPf/AAAAAAAAAAAcAPf/AAAAAAAAAAAdAPf/AAAAAAAAAAAeAPP/AAAAAAAAAAAfAPP/AAAAAAAAAAAgAPP/AAAAAAAAAAAhAPP/AAAAAAAAAAAiAPP/AAAAAAAAAAAjAPP/AAAAAAAAAAAkAPP/AAAAAAAAAAAlAPP/AAAAAAAAAAAlAPT/AAAAAAAAAAAlAPX/AAAAAAAAAAAlAPb/AAAAAAAAAAAlAPf/AAAAAAAAAAAmAPf/AAAAAAAAAAAnAPf/AAAAAAAAAAAoAPf/AAAAAAAAAAApAPf/AAAAAAAAAAAeAPv/AAAAAAAAAAAfAPv/AAAAAAAAAAAgAPv/AAAAAAAAAAAhAPv/AAAAAAAAAAAiAPv/AAAAAAAAAAAjAPv/AAAAAAAAAAAkAPv/AAAAAAAAAAAlAPv/AAAAAAAAAAApAPv/AAAAAAAAAAAqAPv/AAAAAAAAAAArAPv/AAAAAAAAAAAsAPv/AAAAAAAAAAAtAPv/AAAAAAAAAAAuAPv/AAAAAAAAAAAvAPv/AAAAAAAAAAAwAPv/AAAAAAAAAAAxAPv/AAAAAAAAAAAtAPf/AAAAAAAAAAAuAPf/AAAAAAAAAAAvAPf/AAAAAAAAAAAwAPf/AAAAAAAAAAAxAPf/AAAAAAAAAAAyAPf/AAAAAAAAAAAzAPf/AAAAAAAAAAA0APf/AAAAAAAAAAAsAO//AAAAAAAAAAAtAO//AAAAAAAAAAAuAO//AAAAAAAAAAAvAO//AAAAAAAAAAAvAPD/AAAAAAAAAAAvAPH/AAAAAAAAAAAvAPL/AAAAAAAAAAAqAPP/AAAAAAAAAAArAPP/AAAAAAAAAAAsAPP/AAAAAAAAAAAtAPP/AAAAAAAAAAAuAPP/AAAAAAAAAAAvAPP/AAAAAAAAAAAwAPP/AAAAAAAAAAAxAPP/AAAAAAAAAAAyAPP/AAAAAAAAAAAzAPP/AAAAAAAAAAA0APP/AAAAAAAAAAA0APL/AAAAAAAAAAA0APH/AAAAAAAAAAA0APD/AAAAAAAAAAA0AO//AAAAAAAAAAA1AO//AAAAAAAAAAA2AO//AAAAAAAAAAA3AO//AAAAAAAAAAA4AO//AAAAAAAAAAA5AO//AAAAAAAAAAA6AO//AAAAAAAAAAA7AO//AAAAAAAAAAA8AO//AAAAAAAAAAA9AO//AAAAAAAAAAA+AO//AAAAAAAAAAA/AO//AAAAAAAAAABAAO//AAAAAAAAAABBAO//AAAAAAAAAABCAO//AAAAAAAAAABCAO7/AAAAAAAAAABCAO3/AAAAAAAAAABDAO3/AAAAAAAAAABEAO3/AAAAAAAAAABFAO3/AAAAAAAAAABGAO3/AAAAAAAAAABHAO3/AAAAAAAAAABIAO3/AAAAAAAAAABJAO3/AAAAAAAAAABKAO3/AAAAAAAAAABLAO3/AAAAAAAAAABLAO7/AAAAAAAAAABLAO//AAAAAAAAAABMAO//AAAAAAAAAABNAO//AAAAAAAAAABOAO//AAAAAAAAAABPAO//AAAAAAAAAABQAO//AAAAAAAAAABRAO//AAAAAAAAAABSAO//AAAAAAAAAABGAPL/AAAAAAAAAABGAPP/AAAAAAAAAABGAPT/AAAAAAAAAABGAPX/AAAAAAAAAABGAPb/AAAAAAAAAABAAPL/AAAAAAAAAABAAPP/AAAAAAAAAABAAPT/AAAAAAAAAABAAPX/AAAAAAAAAABAAPb/AAAAAAAAAABMAPL/AAAAAAAAAABMAPP/AAAAAAAAAABMAPT/AAAAAAAAAABMAPX/AAAAAAAAAABMAPb/AAAAAAAAAAAvAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAAxAAAAAAAAAAAAAAAyAAAAAAAAAAAAAAAzAAAAAAAAAAAAAAA0AAAAAAAAAAAAAAA1AAAAAAAAAAAAAAA2AAAAAAAAAAAAAAA3AAAAAAAAAAAAAAA4AAAAAAAAAAAAAAA5AAAAAAAAAAAAAAA6AAAAAAAAAAAAAAA7AAAAAAAAAAAAAAA7AAEAAAAAAAAAAAA7AAIAAAAAAAAAAAA7AAMAAAAAAAAAAAA7AAQAAAAAAAAAAAA7AAUAAAAAAAAAAAARACEAAAAAAAAAAAASACEAAAAAAAAAAAATACEAAAAAAAAAAAAUACEAAAAAAAAAAAAVACEAAAAAAAAAAAAWACEAAAAAAAAAAAAXACEAAAAAAAAAAADt/yUAAAAAAAAAAADu/yUAAAAAAAAAAADv/yUAAAAAAAAAAADw/yUAAAAAAAAAAADx/yUAAAAAAAAAAADy/yUAAAAAAAAAAADz/yUAAAAAAAAAAAD0/yUAAAAAAAAAAAD1/yUAAAAAAAAAAAD2/yUAAAAAAAAAAAD5/yUAAAAAAAAAAAD6/yUAAAAAAAAAAAD7/yUAAAAAAAAAAAD8/yUAAAAAAAAAAAD9/yUAAAAAAAAAAAD+/yUAAAAAAAAAAAD//yUAAAAAAAAAAAACACUAAAAAAAAAAAADACUAAAAAAAAAAAAEACUAAAAAAAAAAAAFACUAAAAAAAAAAAAGACUAAAAAAAAAAAAHACUAAAAAAAAAAAAIACUAAAAAAAAAAAALACUAAAAAAAAAAAAMACUAAAAAAAAAAAANACUAAAAAAAAAAAAOACUAAAAAAAAAAAAPACUAAAAAAAAAAAAQACUAAAAAAAAAAAD8/yAAAAAAAAAAAAD8/yEAAAAAAAAAAAD8/x8AAAAAAAAAAAD8/x4AAAAAAAAAAAAFACEAAAAAAAAAAAAFACAAAAAAAAAAAAAFAB8AAAAAAAAAAAAFAB4AAAAAAAAAAAAXACAAAAAAAAAAAAAXAB8AAAAAAAAAAAAYAB8AAAAAAAAAAAAZAB8AAAAAAAAAAAAaAB8AAAAAAAAAAAAbAB8AAAAAAAAAAAAcAB8AAAAAAAAAAAAcACAAAAAAAAAAAAAcACEAAAAAAAAAAAAdACEAAAAAAAAAAAAeACEAAAAAAAAAAAAfACEAAAAAAAAAAAAgACEAAAAAAAAAAAAhACEAAAAAAAAAAAAhACAAAAAAAAAAAAAhAB8AAAAAAAAAAAAiAB8AAAAAAAAAAAAjAB8AAAAAAAAAAAAkAB8AAAAAAAAAAAAlAB8AAAAAAAAAAAAmAB8AAAAAAAAAAAAmACAAAAAAAAAAAAAmACEAAAAAAAAAAAAnACEAAAAAAAAAAAAoACEAAAAAAAAAAAApACEAAAAAAAAAAAAqACEAAAAAAAAAAAArACEAAAAAAAAAAAARACUAAAAAAAAAAAAbACcAAAAAAAAAAAAcACcAAAAAAAAAAAAdACcAAAAAAAAAAAAeACcAAAAAAAAAAAAfACcAAAAAAAAAAAAgACcAAAAAAAAAAAAhACcAAAAAAAAAAAAiACcAAAAAAAAAAAAiACYAAAAAAAAAAAAiACUAAAAAAAAAAAAjACUAAAAAAAAAAAAkACUAAAAAAAAAAAAlACUAAAAAAAAAAAAmACUAAAAAAAAAAAAnACUAAAAAAAAAAAAoACUAAAAAAAAAAAApACUAAAAAAAAAAAAqACUAAAAAAAAAAAArACUAAAAAAAAAAABRACEAAAAAAAAAAAAaACcAAAAAAAAAAAAZACcAAAAAAAAAAAAYACcAAAAAAAAAAAAXACcAAAAAAAAAAAAWACcAAAAAAAAAAAAVACcAAAAAAAAAAAAUACcAAAAAAAAAAAAsACEAAAAAAAAAAAAtACEAAAAAAAAAAAAuACEAAAAAAAAAAAAvACEAAAAAAAAAAAAvACAAAAAAAAAAAAAvAB8AAAAAAAAAAAAwAB8AAAAAAAAAAAAxAB8AAAAAAAAAAAAyAB8AAAAAAAAAAAAyAB4AAAAAAAAAAAAyAB0AAAAAAAAAAAAzAB0AAAAAAAAAAAA0AB0AAAAAAAAAAAA1AB0AAAAAAAAAAAA2AB0AAAAAAAAAAAA2AB4AAAAAAAAAAAA2AB8AAAAAAAAAAAA3AB8AAAAAAAAAAAA4AB8AAAAAAAAAAAA5AB8AAAAAAAAAAAA5ACAAAAAAAAAAAAA5ACEAAAAAAAAAAAA6ACEAAAAAAAAAAAA7ACEAAAAAAAAAAAA8ACEAAAAAAAAAAAA9ACEAAAAAAAAAAAA+ACEAAAAAAAAAAAA/ACEAAAAAAAAAAABAACEAAAAAAAAAAABBACEAAAAAAAAAAABEACEAAAAAAAAAAABFACEAAAAAAAAAAABGACEAAAAAAAAAAABHACEAAAAAAAAAAABHACAAAAAAAAAAAABHAB8AAAAAAAAAAABHAB4AAAAAAAAAAABIAB4AAAAAAAAAAABJAB4AAAAAAAAAAABKAB4AAAAAAAAAAABKAB8AAAAAAAAAAABKACAAAAAAAAAAAABKACEAAAAAAAAAAABLACEAAAAAAAAAAABMACEAAAAAAAAAAABNACEAAAAAAAAAAABOACEAAAAAAAAAAABPACEAAAAAAAAAAABQACEAAAAAAAAAAABOACAAAAAAAAAAAABOAB8AAAAAAAAAAABOAB4AAAAAAAAAAABSACEAAAAAAAAAAABSACAAAAAAAAAAAABSAB8AAAAAAAAAAABSAB4AAAAAAAAAAABTACEAAAAAAAAAAABUACEAAAAAAAAAAABVACEAAAAAAAAAAABSABkAAAAAAAAAAABTABkAAAAAAAAAAABUABkAAAAAAAAAAABVABkAAAAAAAAAAABWABkAAAAAAAAAAAArACYAAAAAAAAAAAArACcAAAAAAAAAAAAsACcAAAAAAAAAAAAtACcAAAAAAAAAAAAuACcAAAAAAAAAAAAvACcAAAAAAAAAAAAwACcAAAAAAAAAAAAxACcAAAAAAAAAAAAyACcAAAAAAAAAAAAzACcAAAAAAAAAAAA0ACcAAAAAAAAAAAA1ACcAAAAAAAAAAAA2ACcAAAAAAAAAAAA3ACcAAAAAAAAAAAA3ACYAAAAAAAAAAAA3ACUAAAAAAAAAAAA4ACUAAAAAAAAAAAA5ACUAAAAAAAAAAAA6ACUAAAAAAAAAAAA7ACUAAAAAAAAAAAA8ACUAAAAAAAAAAAA9ACUAAAAAAAAAAAA+ACUAAAAAAAAAAAA/ACUAAAAAAAAAAABAACUAAAAAAAAAAABBACUAAAAAAAAAAABEACUAAAAAAAAAAABFACUAAAAAAAAAAABGACUAAAAAAAAAAABHACUAAAAAAAAAAABIACUAAAAAAAAAAABJACUAAAAAAAAAAABKACUAAAAAAAAAAABKACYAAAAAAAAAAABKACcAAAAAAAAAAABLACcAAAAAAAAAAABMACcAAAAAAAAAAABNACcAAAAAAAAAAABOACcAAAAAAAAAAABPACcAAAAAAAAAAABQACcAAAAAAAAAAABRACcAAAAAAAAAAABSACcAAAAAAAAAAABTACcAAAAAAAAAAABUACcAAAAAAAAAAABVACcAAAAAAAAAAABSAPb/AAAAAAAAAABTAPb/AAAAAAAAAABUAPb/AAAAAAAAAABVAPb/AAAAAAAAAABWAPL/AAAAAAAAAABXAPL/AAAAAAAAAABYAPL/AAAAAAAAAABCACUAAAAAAAAAAABDACUAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_lquwl")

[node name="UI" type="CanvasLayer" parent="."]

[node name="MessageLabel" type="Label" parent="UI"]
anchors_preset = -1
anchor_left = 1.167
anchor_top = 1.295
anchor_right = 1.167
anchor_bottom = 1.295
offset_left = -1344.38
offset_top = -839.16
offset_right = -1117.38
offset_bottom = -728.16
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_272bh")
theme_override_font_sizes/font_size = 45
horizontal_alignment = 1
vertical_alignment = 1

[node name="LifeLabel" type="Label" parent="UI"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Enemy1" parent="." instance=ExtResource("9_4c57u")]
position = Vector2(-1600, 375)

[node name="CollisionShape2D" parent="Enemy1" index="1"]
position = Vector2(2, 0)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.5, 1)

[node name="Background" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(742.5, 389.5)
scale = Vector2(1.63359, 1.77639)
texture = ExtResource("2_5vw27")
region_enabled = true
region_rect = Rect2(0, 0, 3840, 2160)

[node name="Spawn1" type="Node2D" parent="."]
position = Vector2(3368, 204)

[node name="Spawn2" type="Node2D" parent="."]
position = Vector2(-1350, 1059)

[node name="Spawn3" type="Node2D" parent="."]
position = Vector2(-1833, -830)

[node name="Spawn4" type="Node2D" parent="."]
position = Vector2(3679, -843)

[node name="Spawn5" type="Node2D" parent="."]
position = Vector2(1033, 472)

[node name="Spawn6" type="Node2D" parent="."]
position = Vector2(4032, -514)

[node name="Spawn7" type="Node2D" parent="."]
position = Vector2(3353, 1537)

[node name="Spawn8" type="Node2D" parent="."]
position = Vector2(4191, 9)

[node name="Spawn9" type="Node2D" parent="."]
position = Vector2(3864, 1539)

[node name="Spawn10" type="Node2D" parent="."]
position = Vector2(601, -770)

[node name="Enemy2" parent="." instance=ExtResource("9_4c57u")]
position = Vector2(811, -678)

[node name="Enemy4" parent="." instance=ExtResource("9_4c57u")]
position = Vector2(-749, 1719)

[node name="Enemy3" parent="." instance=ExtResource("9_4c57u")]
position = Vector2(710, 903)

[node name="Enemy5" parent="." instance=ExtResource("9_4c57u")]
position = Vector2(-869, 1238)

[node name="Enemy7" parent="." instance=ExtResource("9_4c57u")]
position = Vector2(2332, -58)

[node name="Enemy6" parent="." instance=ExtResource("9_4c57u")]
position = Vector2(4048, 1143)

[editable path="Enemy1"]
